Revision history for File::DataClass

          - Bug fix in suffix regex
          - Adds suffix method to IO
          - Fix error in throwing from ensure class loaded
          - JSON decode now returns Perl bools
          - Allow base to be passed into IO relative
          - Removed Perl 5.10 from Travis config
          - Refactored coding style
          - Updated copyright year

0.73.1    2017-06-02 01:02:52
          - More efficient IO::stat
          - Added more broken smokers

0.72.1    2017-04-02 09:19:50
          - Toolchain update CVE-2016-1238
          - Better error message in cache set

0.71.1    2016-07-29 19:58:01
          - Added broken smoker

0.70.1    2016-07-29 16:23:42
          - Toolchain update

0.69.1    2016-07-05 01:36:01
          - Fixed cache invalidation for multifile reads

0.68.1    2016-02-01 14:31:42
          - Fixed bug calling push_layer on mswin32

0.67.1    2016-02-01 00:18:31
          - Improved test coverage
          - Fixed coverage token it's specific to the repository
          - Added coverage badge and coverage report posting
          - Added parameter checking to IO iterator
          - Refactored smoker exceptions to dump file
          - Cache class and attributes settable from configuration
          - Made result creation more efficient
          - Proxy fdopen on io_handle
          - Added more tests
          - IO constructor without args creates a new IO::Handle
          - Toolchain update

0.66.1    2015-08-29 09:58:19
          - Broken smoker 7d05f746-6cb1-1014-afba-1d3088877a71

0.65.1    2015-08-12 23:36:59
          - Broken smoker 72b36e62-3f5b-11e5-9808-9febf015f39b

0.64.1    2015-08-09 20:28:41
          - Fix tests on cygwin
          - Stop using feature state
          - Replaced 01always_pass.t with 00report_metadata.t

0.63.1    2015-06-21 22:41:24
          - Skip tests if Test::Deep 0.116 installed
          - Added F:DC:IO:clone